Spell initial commit