@@ -1,6 +1,8 @@
 package pl.psi;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -16,8 +18,8 @@ public class GameEngineTest
     {
         final CastleCreatureFactory creatureFactory = new CastleCreatureFactory();
         final GameEngine gameEngine =
-            new GameEngine( new Hero( List.of( creatureFactory.create( 1, false, 5 ) ) ),
-                new Hero( List.of( creatureFactory.create( 1, false, 5 ) ) ) );
+            new GameEngine( new Hero( List.of( creatureFactory.create( 1, false, 5 ) ), Collections.emptyList()),
+                new Hero( List.of( creatureFactory.create( 1, false, 5 ) ), Collections.emptyList()) );
 
         gameEngine.attack( new Point( 1, 1 ) );
     }
